#RI-4884 - fix wb result z-index

--- a/redisinsight/ui/src/components/query-card/QueryCardCommonResult/styles.module.scss
+++ b/redisinsight/ui/src/components/query-card/QueryCardCommonResult/styles.module.scss
@@ -17,7 +17,7 @@
 
   background-color: var(--euiPageBackgroundColor);
 
-  z-index: 10;
+  z-index: 6;
 }
 
 .loading {
